2차시 문제풀이완료